--- a/2do parcial 2da parte.ipynb
+++ b/2do parcial 2da parte.ipynb
@@ -18,21 +18,21 @@
         "    def valid_moves(self):\n",
         "        return [(i, j) for j in range(4) for i in range(4) if self.state[i, j] == 0] # se define el rango de movimientos validos\n",
         "\n",
-        "    def update(self, symbol, row, col):\n",
+        "    def update(self, symbol, row, col): # se define la actualizacion del tablero\n",
         "        if self.state[row, col] == 0:\n",
         "            self.state[row, col] = symbol \n",
         "        else:\n",
         "            raise ValueError (\"movimiento ilegal !\") # se define el error en caso de que se intente hacer un movimiento ilegal\n",
         "\n",
-        "    def is_game_over(self):\n",
+        "    def is_game_over(self): # se define la funcion de fin de juego\n",
         "        # comprobar filas y columnas\n",
-        "        if (self.state.sum(axis=0) == 4).sum() >= 1 or (self.state.sum(axis=1) == 4).sum() >= 1:\n",
+        "        if (self.state.sum(axis=0) == 4).sum() >= 1 or (self.state.sum(axis=1) == 4).sum() >= 1: # se define la suma de las filas y columnas\n",
         "            return 1\n",
         "        if (self.state.sum(axis=0) == -4).sum() >= 1 or (self.state.sum(axis=1) == -4).sum() >= 1:\n",
         "            return -1\n",
         "        # comprobar diagonales\n",
         "        diag_sums = [\n",
-        "            sum([self.state[i, i] for i in range(4)]),\n",
+        "            sum([self.state[i, i] for i in range(4)]), # se define la suma de las diagonales\n",
         "            sum([self.state[i, 4 - i - 1] for i in range(4)]),\n",
         "        ]\n",
         "        if diag_sums[0] == 4 or diag_sums[1] == 4:\n",
@@ -45,8 +45,8 @@
         "        # seguir jugando\n",
         "        return None\n",
         "\n",
-        "    def reset(self):\n",
-        "        self.state = np.zeros((4,4))\n"
+        "    def reset(self): # se define la funcion de reseteo del tablero\n",
+        "        self.state = np.zeros((4,4)) \n"
       ]
     },
     {
@@ -59,32 +59,32 @@
       "source": [
         "from tqdm import tqdm # se importa la libreria para mostrar la barra de progreso\n",
         "\n",
-        "class Game():\n",
+        "class Game(): # se define la clase del juego\n",
         "    def __init__(self, player1, player2):\n",
-        "        player1.symbol = 1\n",
-        "        player2.symbol = -1\n",
-        "        self.players = [player1, player2]\n",
+        "        player1.symbol = 1 # se define el simbolo del jugador 1\n",
+        "        player2.symbol = -1 # se define el simbolo del jugador 2\n",
+        "        self.players = [player1, player2] # se definen los jugadores\n",
         "        self.board = Board()\n",
         "\n",
-        "    def selfplay(self, rounds=100):\n",
+        "    def selfplay(self, rounds=100): # se define la funcion de autojuego\n",
         "        wins = [0, 0]\n",
-        "        for i in tqdm(range(1, rounds + 1)):\n",
-        "            self.board.reset()\n",
-        "            for player in self.players:\n",
-        "                player.reset()\n",
-        "            game_over = False\n",
-        "            while not game_over:\n",
-        "                for player in self.players:\n",
-        "                    action = player.move(self.board)\n",
-        "                    self.board.update(player.symbol, action[0], action[1])\n",
+        "        for i in tqdm(range(1, rounds + 1)): # se define la barra de progreso\n",
+        "            self.board.reset() # se resetea el tablero\n",
+        "            for player in self.players: # se define el jugador\n",
+        "                player.reset() # se resetea el jugador\n",
+        "            game_over = False # se define el fin del juego\n",
+        "            while not game_over: \n",
+        "                for player in self.players: \n",
+        "                    action = player.move(self.board) \n",
+        "                    self.board.update(player.symbol, action[0], action[1]) \n",
         "                    for player in self.players:\n",
         "                        player.update(self.board)\n",
         "                    if self.board.is_game_over() is not None:\n",
         "                        game_over = True\n",
         "                        break\n",
-        "            self.reward()\n",
-        "            for ix, player in enumerate(self.players):\n",
-        "                if self.board.is_game_over() == player.symbol:\n",
+        "            self.reward() # se define la recompensa\n",
+        "            for ix, player in enumerate(self.players): \n",
+        "                if self.board.is_game_over() == player.symbol: \n",
         "                    wins[ix] += 1\n",
         "        return wins # se retorna el numero de victorias\n",
         "\n",
